--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -18,16 +18,22 @@
                 <a href="./index.html">
                 <li>Home</li>
                 </a>
-                <li></li>
-                <li></li>
+                <li>Quiz</li>
+                <li>Blog</li>
+                <a href="../login/login.html">
                 <li> Login </li>
+                 </a>
+                 <a href="../cadastro/cadastro.html">
                 <li> Cadastro </li>
-                
+                </a>
+
+
             </ul>
         </div>
     </div>
     <div class="banner">
         <div class="container">
+            <img class="imagemPrincipal" src="../assets/banner.jpg.avif" alt="">
             <p> <b> Chute pela saúde: jogue, sorria, vença!</b> </p>
         </div>
     </div>
@@ -58,9 +64,9 @@
                 <img src="../assets/saude.jpg" alt="">
             </div>
             <div class="relatoSaude">
-                <div class="mensagemSaude">
+                <div class="mensagemSaude   ">
                 <h2>O que é a Saude no Futebol ?</h2>
-                <p>a prática do futebol auxilia no aumento da capacidade cardiorrespiratória e potência aeróbica. O
+                <p>A prática do futebol auxilia no aumento da capacidade cardiorrespiratória e potência aeróbica. O
                     esporte também fortalece a musculatura, especificamente da coluna e das pernas. Além disso, a
                     prática regular da modalidade auxilia na melhora do: Equilíbrio; Força; Coordenação; Agilidade. Na
                     saúde, assim como outra prática de exercício físico, o futebol praticado de forma regular reduz o
