Inserido a API web-data-viz

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>FutLife</title>
 </head>
 
@@ -21,11 +21,11 @@
         <nav>
 
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="">Quiz</a></li>
                 <li>|</li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Cadastro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
             </ul>
 
         </nav>
@@ -38,7 +38,7 @@
 
     <div class="banner">
         <div class="container">
-            <img class="imagemPrincipal" src="../assets/banner.jpg.avif" alt="">
+            <img class="imagemPrincipal" src="./assets/banner.jpg.avif" alt="">
             <p> <b> Chute pela saúde: jogue, sorria, vença!</b> </p>
         </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="social">
         <div class="container">
             <div class="imagemCampo">
-                <img src="../assets/futebol.jpg" alt="">
+                <img src="./assets/futebol.jpg" alt="">
 
             </div>
             <div class="relatoFutebol">
@@ -75,7 +75,7 @@
 
 
             <div class="imagemSaude">
-                <img src="../assets/saude.jpg" alt="">
+                <img src="./assets/saude.jpg" alt="">
             </div>
             <div class="relatoSaude">
                 <div class="mensagemSaude   ">
@@ -99,7 +99,7 @@
         <div class="relato">
             <div class="controle">
                 <div class="imagemJK">
-                    <img src="../assets/images.png" alt="">
+                    <img src="./assets/images.png" alt="">
                 </div>
                 <h2>Como o Futebol ajudou na minha Saude ? </h2>
                 <p>“O Futebol foi bastante fundemental na minha saude, pois quando tinha por volta dos 13 a 14 anos, era
@@ -114,27 +114,31 @@
 
         <div class="usuario">
             <div class="escrever">
-                <h2>Qual esporte é o melhor para saude ?</h2>
+                <h2>Qual é o melhor esporte para saude ?</h2>
             </div>
             <div class="questionario">
                 <div>
                     <div>
-                        <img src="../assets/questionariof.jpg" alt="">
+                        <h4>Futebol?</h4>
+                        <img src="./assets/questionariof.jpg" alt="">
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="../assets/questionarioS.jpg" alt="">
+                        <h4>Surf?</h4>
+                        <img src="./assets/questionarioS.jpg" alt="">
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="../assets/questionarioV.jpg" alt="">
+                        <h4>Volei?</h4>
+                        <img src="./assets/questionarioV.jpg" alt="">
                     </div>
                 </div>
             </div>
+            
         </div>
 
         <div class="footer">
