Modifiquei meu site, implementei o QUIZ

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">Quiz</a></li>
+                <li><a href="login.html">Quiz</a></li>
                 <li>|</li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cadastro.html">Cadastro</a></li>
@@ -114,29 +114,11 @@
 
         <div class="usuario">
             <div class="escrever">
-                <h2>Qual é o melhor esporte para saude ?</h2>
+                <h2>Depois de explorar a saúde no futebol, que tal testar um pouco os seus conhecimentos? Vamos lá!</h2>
             </div>
             <div class="questionario">
-                <div>
-                    <div>
-                        <h4>Futebol?</h4>
-                        <img src="./assets/questionariof.jpg" alt="">
-                    </div>
-                </div>
-
-                <div>
-                    <div>
-                        <h4>Surf?</h4>
-                        <img src="./assets/questionarioS.jpg" alt="">
-                    </div>
-                </div>
-
-                <div>
-                    <div>
-                        <h4>Volei?</h4>
-                        <img src="./assets/questionarioV.jpg" alt="">
-                    </div>
-                </div>
+                <h5>Clique na imagem,  e responda!</h5>
+               <a href="login.html"><img src="./assets/questionario.jpeg" alt=""></a>
             </div>
             
         </div>
