--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -15,17 +15,17 @@
 
 <div class="fundo">
         <div class="container">
-            <div class="login">
-                <div class="alerta_erro">
-                  <div class="card_erro" id="cardErro">
-                    <span id="mensagem_erro"></span>
-                  </div>
-                </div>
-            <div class="logo">
-                <a href="index.html">
-                <h3>FutLife</h3>
-                </a>
+          <div class="alerta_erro">
+            <div class="card_erro" id="cardErro">
+              <span id="mensagem_erro"></span>
             </div>
+          </div>
+          <div class="logo">
+            <a href="index.html">
+            <h3>FutLife</h3>
+            </a>
+        </div>
+            <div class="login">
              <h2>Cadastro</h2>
              <input type="text" placeholder="Nome" name="" id="input_nome">
              <input type="text" name="" placeholder="Email" id="input_email">
@@ -34,9 +34,10 @@
              <p>Já possui uma conta? <a href="login.html"> Entre Aqui!</a></p>
              <button onclick="cadastrar()">cadastrar</button>
              <div id="div_aguardar" class="loading-div">
-                <img src="./assets/circle-loading.gif" id="loading-gif" />
+                <img src="./assets/teste.gif" id="loading-gif" />
               </div>    
               <div id="div_erros_login"></div>
+            </div>
         </div>
     
 </div>
@@ -97,9 +98,9 @@ function cadastrar() {
       return false;
     }
 
-    else if (senhaVar > 6) {
+    else if (senhaVar <= 6) {
       cardErro.style.display = "block";
-      mensagem_erro.innerHTML = `Senha deve ser maior que 8`
+      mensagem_erro.innerHTML = `Senha deve ser maior que 6`
 
       finalizarAguardar();
       return false;
@@ -124,9 +125,9 @@ function cadastrar() {
       body: JSON.stringify({
         // crie um atributo que recebe o valor recuperado aqui
         // Agora vá para o arquivo routes/usuario.js
-        nomeServer: nomeVar,
-        emailServer: emailVar,
-        senhaServer: senhaVar,
+        nome: nomeVar,
+        email: emailVar,
+        senha: senhaVar,
       }),
     })
       .then(function (resposta) {
@@ -140,7 +141,7 @@ function cadastrar() {
 
           setTimeout(() => {
             window.location = "login.html";
-          }, "2000");
+          }, "5000");
 
           limparFormulario();
           finalizarAguardar();
