foi feita a dashboard, e ja iniciando o processo de implementação no banco de dados

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -43,7 +43,7 @@
                     </li>
                 </ul>
             </div>
-            <button id="submit">Submit</button>
+            <button id="submit">Próxima</button>
         </div>
 
     </div>
