Foram adicionado algumas imagens no site, e modificado algumas funções no quiz, e também conectado o BD na VM, assim terminando o projeto!

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -20,7 +20,7 @@
 
                 <li>Seja Bem Vindo ao Ranking</li>
                 <li>|</li>
-                <li><a href="../dashboard/inicio.html">Exit</a></li>
+                <li><a href="../dashboard/inicio.html">Voltar</a></li>
                 <li> Olá, <span id="b_usuario"> usuário</span>!</li>
                 <li><a href="../dashboard/dashUsuario.html">Veja sua evolução</a></li>
             </ul>
@@ -28,7 +28,8 @@
     </div>
 
 
-
+    <div class="kpi"><p>Pontos de usuario</p></div>
+    
         <div id="grafico"></div>
 
    
@@ -74,7 +75,7 @@
         let dados = {
             labels: labels,
             datasets: [{
-                label: 'Pontos usuário',
+                label: '',
                 
                 borderWidth: 2,
                 borderColor: 'white',
