--- a/public/quiz.html
+++ b/public/quiz.html
@@ -12,7 +12,7 @@
 
     <div class="box-maior">
         <div class="titulo">
-          <a href="./dashboard/inicio.html"> <h1>FutLife</h1> </a>
+          <a href="./dashboard/inicio.html"> <h1>Voltar</h1> </a>
         </div>
         <div class="start-container" id="start">
             <div class="inicio">
@@ -44,6 +44,7 @@
                 </ul>
             </div>
             <button id="submit">Próxima</button>
+            <div id="error-message" style="color: red;"></div>
         </div>
 
     </div>
